MDL-85017 theme_boost: Fix More menu active item indicator spacing

--- a/theme/boost/scss/moodle/moremenu.scss
+++ b/theme/boost/scss/moodle/moremenu.scss
@@ -87,6 +87,10 @@
                 display: none;
             }
         }
+        // Make space for active item indicator.
+        .dropdown-item {
+            padding-left: map-get($spacers, 4);
+        }
     }
 
     .dropdown-item[aria-current="true"],
